fix: fix scrollbar

--- a/wp-app/wp-content/themes/attract/modules/services/services.scss
+++ b/wp-app/wp-content/themes/attract/modules/services/services.scss
@@ -56,7 +56,7 @@
                 height: 0.25em;
             }
             &::-webkit-scrollbar-thumb {
-                background-color: $c-border;
+                background-color: $c-blue;
                 border-radius: 5px;
             }
         }
